@@ -4,7 +4,7 @@ require 'sinatra/content_for'
 require "tilt/erubis"
 require 'redcarpet'
 
-root = File.expand_path("..", __FILE__)
+ROOT = File.expand_path("..", __FILE__)
 
 before do
   @title = "CMS"
@@ -23,8 +23,21 @@ configure do
       "5dc69783347e8b8e37a6ce824691a09bd72f7ce2a0542afbc10f9416150f9a24"
 end
 
+def path_from_filename(filename)
+  ROOT + "/data/" + filename
+end
+
+# e.g. txt, md, jpeg
+def get_filetype(filepath)
+  filepath.split(".")[-1]
+end
+
+def filename_from_path(filepath)
+  filepath.split("/")[-1]
+end
+
 def load_file_content(filepath)
-  filetype = filepath.split(".")[-1] # e.g. txt, md, jpeg
+  filetype =  get_filetype(filepath)
   file = File.read(filepath)
 
   case filetype
@@ -38,14 +51,14 @@ def load_file_content(filepath)
 end
 
 get "/" do
-  @files = Dir.glob(root + "/data/*").map do |path|
+  @files = Dir.glob(ROOT + "/data/*").map do |path|
     File.basename(path)
   end
   erb :index
 end
 
 get "/:filename" do |filename|
-  filepath = root + "/data/" + filename
+  filepath = path_from_filename(filename)
 
   if File.file?(filepath)
     load_file_content(filepath)
@@ -55,14 +68,54 @@ get "/:filename" do |filename|
   end
 end
 
+get "/:filename/edit" do |filename|
+  @filename = filename
+  filepath = path_from_filename(filename)
+
+  if File.file?(filepath)
+    @content = load_file_content(filepath)
+    headers["Content-Type"] = "text/html;charset=utf-8"
+    erb :edit
+  else
+    session[:error] = "#{filename} does not exist."
+    redirect '/'
+  end
+end
+
+post '/:filename/edit' do |filename|
+    # update file contents based on which param?
+    filepath = path_from_filename(filename)
+    File.write(filepath, params["new_content"])
+    session[:success] = "#{filename} successfully updated"
+    params.inspect
+    redirect '/'
+    
+end
+
 =begin
   Requirements:
-    Handle user loading .md files and txt files (case statement for each file type?)
-    Render the markdown as HTML
-  General steps:
-    Create case statement for handling different file types
+    Create an edit link next to each document
+    Direct to edit page upon clicking edit link
+    The document's content will appear within a textarea
+    Changes can be saved with the "save changes" button
+      User then redirected to index page
+      Flash message about the update
+
+  Overview:
+    #*Create an edit button link that is printed with each filename (index.erb)
+    #*Create get "/:file/edit"
+      #*create @contents, @filepath/name?
+    Create post "/:file/edit"
+      redirect to '/'
+      add success message
+    Create edit.erb
+      #* Label for textarea
+      #* Look up how to make a textarea with contents loaded in
+      Save Changes button
 
 
-  Algorithm/Concrete:
+
+  Algo/Concrete:
+
 
 =end
