@@ -23,10 +23,10 @@ class CMSTest < Minitest::Test
   end
 
   def test_viewing_text_document
-    get '/about.txt'
+    get '/changes.txt'
     assert_equal 200, last_response.status
     assert_equal "text/plain", last_response["Content-Type"]
-    assert_includes last_response.body, "soaring amidst the clouds"
+    assert_includes last_response.body, "can come into existence"
   end
 
   def test_handle_nonexistent_file
@@ -43,5 +43,26 @@ class CMSTest < Minitest::Test
     assert_equal 200, last_response.status
     assert_equal "text/html;charset=utf-8", last_response["Content-Type"]
     assert_includes last_response.body, "<h1>Changelog</h1>"
+  end
+
+  def test_edit_file
+    get '/about.txt/edit'
+
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<textarea"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+
+  def test_update_file
+    post 'about.txt/edit', new_content: "new content"
+
+    assert_equal 302, last_response.status
+    get last_response["Location"]
+
+    assert_includes last_response.body,  "about.txt successfully updated"
+
+    get '/about.txt'
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "new content"
   end
 end
